--- a/app/views/users/_avatar_list.html.erb
+++ b/app/views/users/_avatar_list.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="mu-avatar-list">
-    <% avatars_for(@user).sort_by(&:id).each do |avatar| %>
+    <% avatars_for(@user, Organization.current).sort_by(&:id).each do |avatar| %>
       <%= show_avatar_item(avatar) %>
     <% end %>
 
