WIP: Added requires attention filter

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -337,6 +337,25 @@ summary.discussion-summary {
             }
           }
         }
+        .discussion-message-not-actually-a-question {
+          cursor: pointer;
+          text-decoration: none;
+          &.selected {
+            i {
+              position: relative;
+              color: $brand-primary;
+              &:after {
+                position: absolute;
+                left: 6px;
+                content: ' ';
+                height: 19px;
+                width: 2px;
+                background-color: $brand-primary;
+                transform: rotate(-45deg);
+              }
+            }
+          }
+        }
         i {
           color: #aaaaaa
         }
