--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -401,3 +401,10 @@ $statuses: (
 .no-margin {
   margin: 0 !important;
 }
+
+.discussion-requires-attention {
+  margin-right: 20px;
+  label {
+    font-weight: normal;
+  }
+}
