Introducing submission store

--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -45,6 +45,7 @@
 <%= render_exercise_input_layout(@exercise) %>
 
 <%= hidden_field_tag default_content_tag_id(@exercise), @default_content %>
+<%= hidden_field_tag "mu-exercise-id", @exercise.id %>
 
 <div style="display: none" id="processing-template">
   <div class="bs-callout bs-callout-info">
