--- a/app/views/layouts/_progress_bar.html.erb
+++ b/app/views/layouts/_progress_bar.html.erb
@@ -1,6 +1,12 @@
 <div class="progress-list-flex">
   <% guide.exercises.each do |e| %>
-    <a <%= turbolinks_enable_for e %> href="<%= exercise_path(e)%>" aria-label="<%= e.navigable_name %>" title="<%= e.navigable_name %>" class="<%= class_for_progress_list_item(e, e == actual)%>">
+    <a
+      <%= turbolinks_enable_for e %>
+      href="<%= exercise_path(e)%>"
+      aria-label="<%= e.navigable_name %>"
+      title="<%= e.navigable_name %>"
+      data-mu-exercise-id="<%= e.id %>"
+      class="<%= class_for_progress_list_item(e, e == actual)%>">
     </a>
   <% end %>
 </div>
