--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -413,3 +413,13 @@ $statuses: (
     font-weight: normal;
   }
 }
+
+.discussion-moderator-access {
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .moderator-initials {
+    font-size: 14px;
+  }
+}
