--- a/app/views/discussions/new.html.erb
+++ b/app/views/discussions/new.html.erb
@@ -24,7 +24,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="discussion-new-message-content">
-              <%= f.editor :description, '', {id: 'new-discussion-message', class: 'form-control', placeholder: t(:message)} %>
+              <%= f.editor :description, '', {id: 'new-discussion-message', class: 'form-control', placeholder: t(:discussion_description_placeholder)} %>
             </div>
           </div>
         </div>
