--- a/app/views/layouts/_discussions.html.erb
+++ b/app/views/layouts/_discussions.html.erb
@@ -58,8 +58,13 @@
                   </span>
                   <span class="hidden-sm hidden-xs"><%= discussion.exercise.friendly %></span>
                   <span class="hidden-md hidden-lg"><%= discussion.exercise.name %></span>
-                  <% if discussion.last_access_period_visible_for?(current_user) %>
-                    <span class="pull-right" style="margin-right: 20px"><%= profile_picture_for(discussion.last_moderator_access_by, 32) %></span>
+                  <% if discussion.last_moderator_access_visible_for?(current_user) %>
+                    <div class="pull-right discussion-moderator-access" >
+                      <%= profile_picture_for(discussion.last_moderator_access_by, 32) %>
+                      <span class="moderator-initials">
+                        <%= discussion.last_moderator_access_by.name_initials %>
+                      </span>
+                    </div>
                   <% end %>
 
                 </div>
