--- a/app/views/exercise_solutions/_contextualization_results_container.html.erb
+++ b/app/views/exercise_solutions/_contextualization_results_container.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= "bs-callout bs-callout-#{icon_class_for contextualization}" %>">
+<div class="<%= "bs-callout bs-callout-#{icon_class_for contextualization.submission_status}" %>">
   <%= render partial: 'exercise_solutions/results_title', locals: {contextualization: contextualization} %>
   <%= yield %>
 </div>
