--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -11,8 +11,7 @@
   <%= open_graph_tags subject %>
   <%= assets_include_tags %>
   <%= csrf_meta_tags %>
-  <%= locale_tags %>
-  <%= version_tags %>
+  <%= globals_tags %>
 
   <%= login_form.header_html %>
 </head>
