Improving considerably query costs of book discussions

--- a/app/views/layouts/_discussions.html.erb
+++ b/app/views/layouts/_discussions.html.erb
@@ -42,13 +42,13 @@
   <% else %>
     <div class="discussions">
       <% @filtered_discussions.each do |discussion| %>
-        <%= link_to item_discussion_path(discussion) do %>
+        <%= link_to exercise_discussion_path(discussion.exercise.id, discussion) do %>
           <div class="discussion">
             <div class="discussion-row">
               <%= discussion_messages_icon(discussion) %>
               <% unless @debatable.respond_to? :language %>
                 <div class="discussion-language-icon">
-                  <%= language_icon(discussion.language) %>
+                  <%= language_icon(discussion.exercise.language) %>
                 </div>
               <% end %>
               <div>
@@ -56,8 +56,8 @@
                   <span class="discussion-status-icon">
                     <%= discussion_status_fa_icon(discussion) %>
                   </span>
-                  <span class="hidden-sm hidden-xs"><%= discussion.exercise.friendly %></span>
-                  <span class="hidden-md hidden-lg"><%= discussion.exercise.name %></span>
+                  <span class="hidden-sm hidden-xs"><%= discussion.exercise.guide.name %> -</span>
+                  <span><%= discussion.exercise.name %></span>
                   <% if discussion.last_moderator_access_visible_for?(current_user) %>
                     <div class="pull-right discussion-moderator-access" >
                       <%= profile_picture_for(discussion.last_moderator_access_by, 32) %>
