--- a/app/views/user_mailer/2nd_reminder.text.erb
+++ b/app/views/user_mailer/2nd_reminder.text.erb
@@ -7,7 +7,7 @@
 <%= t :keep_learning %>
 
 
-© Copyright 2015-<%= DateTime.now.year %> Mumuki Project.
+© Copyright 2015-<%= DateTime.now.year %> Mumuki.
 
 <%= t :stop_emails? %>
 <%= t :cancel_subscription %>
