--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -64,3 +64,7 @@
   <%= render partial: 'layouts/modals/guide_corollary', locals: {guide: @guide} %>
   <%= render partial: 'layouts/modals/new_message', locals: {exercise: @exercise} if should_render_message_input?(@exercise) %>
 <% end if current_user? %>
+
+<script>
+    mumuki.setUpCurrentExp('<%= UserStats.exp_for(@current_user) %>');
+</script>
