Adding read only profile

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
@@ -5,18 +5,32 @@
   align-items: center;
 }
 
-.mu-profile-action {
-  width: 150px;
-  height: 55px;
-
+.mu-profile-actions {
   vertical-align: middle;
-
   margin-left: auto;
+  transition: background-color 0.3s, border-color 0.3s;
 
-  transition: background-color 0.3s, border-color 0.3s
+  .btn {
+    width: 150px;
+    height: 55px;
+    margin-left: 15px;
+
+    &[disabled], &[disabled]:hover {
+      background-color: lighten($mu-color-complementary, 15%);
+      border-color: lighten($mu-color-complementary, 15%);
+    }
+  }
 }
 
-.mu-profile-action[disabled], .mu-profile-action[disabled]:hover {
-  background-color: lighten($mu-color-complementary, 15%);
-  border-color: lighten($mu-color-complementary, 15%);
+.mu-profile-info {
+  font-size: 20px;
+  margin-top: 5px;
+  div {
+    margin-bottom: 15px;
+    .italic {
+      font-style: italic;
+    }
+  }
+
+
 }
