--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           </div>
           <div class="dropdown">
             <span id="profileDropdown" data-toggle="dropdown" aria-label="<%= t(:user) %>" role="menu" tabindex="0">
-              <%= profile_picture %>
+              <%= profile_picture_for current_user %>
             </span>
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
               <%= menu_bar_list_items %>
