--- a/app/views/users/_edit_user_form.html.erb
+++ b/app/views/users/_edit_user_form.html.erb
@@ -1,11 +1,14 @@
 <%= form_for :user, url: update_user_path, :html => { id: 'mu-user-form' }, method: :put do |f| %>
   <div class="mu-user-header">
     <h1><%= t(:edit_profile) %></h1>
-    <%= f.submit t(:save), disabled: true, class: 'btn btn-success mu-profile-action', id: 'mu-edit-profile-btn' %>
+    <div class="mu-profile-actions">
+      <%= link_to t(:cancel), :back, class: 'btn btn-default' if @user.profile_completed? %>
+      <%= f.submit t(:save), disabled: true, class: 'btn btn-success', id: 'mu-edit-profile-btn' %>
+    </div>
   </div>
   <div class="row mu-tab-body">
     <div class="col-md-4 text-center">
-      <%= image_tag @user.profile_picture, class: 'mu-user-avatar', id: 'mu-user-avatar' %>
+      <%= profile_picture_for(@user, id: 'mu-user-avatar', class: 'mu-user-avatar') %>
       <i class="fa fa-pencil fa-2x pointer mu-edit-avatar" id="mu-edit-avatar-icon"></i>
     </div>
     <div class="col-md-8">
