Fixing turbolinks error

--- a/app/views/layouts/_runner_assets.html.erb
+++ b/app/views/layouts/_runner_assets.html.erb
@@ -12,8 +12,7 @@
 
 <% if !loads_more_assets && show_loading_for?(language, assets_kind) %>
   <script id="<%= assets_kind %>-loading-script">
-    let assetsKind = '<%= assets_kind %>';
-    mumuki.load(() => mumuki.assetsLoaderFor(assetsKind));
+    mumuki.load(() => mumuki.assetsLoaderFor('<%= assets_kind %>'));
   </script>
 <% end %>
 
