Using scss constant

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
@@ -96,7 +96,7 @@ $kids-speech-tabs-width: 40px;
   }
 
   .mu-kids-character-animation {
-    width: 120px;
+    width: $kids-characters-height;
   }
 
   .mu-kids-character {
