--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
@@ -54,3 +54,46 @@
 }
 
 
+.mu-kindergarten-context {
+
+  .modal-dialog {
+
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+
+    .modal-content {
+      position: absolute;
+
+      $width: 800px;
+      $height: $width * 0.625;
+
+      height: $height;
+      width: $width;
+
+      top: calc(50vh - #{$height} / 2);
+      left: calc(50vw - #{$width} / 2);
+
+      $border-width: 16px;
+      border: $border-width solid $mu-color-link;
+      border-radius: $border-width;
+      box-shadow: none;
+//      position: relative;
+
+      .mu-kindergarten-close-button {
+        $diameter: 64px;
+        position: absolute;
+        border-radius: 50%;
+        height: $diameter;
+        width: $diameter;
+        color: white;
+        font-weight: bold;
+        border: none;
+        padding: 0;
+        background: $mu-color-link;
+        top: - $diameter / 2 - $border-width / 2;
+        right: - $diameter / 2 - $border-width / 2;
+      }
+    }
+  }
+}
