Add hover and focus properties to edit avatar button

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
@@ -12,6 +12,16 @@
   position: relative;
   top: 100px;
   right: 15px;
+
+  &:hover {
+    outline: none;
+    opacity: 0.5;
+  }
+
+  &:focus {
+    outline: none;
+    opacity: 0.5;
+  }
 }
 
 .mu-avatar-list {
