--- a/app/views/layouts/modals/_kindergarten_context.html.erb
+++ b/app/views/layouts/modals/_kindergarten_context.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade mu-kindergarten-context" id="mu-kindergarten-context" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade mu-kindergarten-context" id="mu-kids-context" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
