--- a/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
@@ -11,7 +11,7 @@
 
         <div class="mu-kids-exercise-description mu-kids-exercise-description-fixed">
           <div class="mu-kids-character">
-            <%= render partial: 'layouts/kids', locals: {exercise: exercise} %>
+            <%= render partial: 'layouts/kindergarten', locals: {exercise: exercise} %>
           </div>
         </div>
         <div class="mu-kids-exercise-workspace">
