--- a/app/views/layouts/_kindergarten.html.erb
+++ b/app/views/layouts/_kindergarten.html.erb
@@ -23,7 +23,7 @@
           <%= exercise.hint.markdownified %>
         </span>
         <button class="expand-or-collapse-hint-media" onclick="mumuki.kindergarten.toggleHintMedia()">
-          <i class="fa fa-fw fa-2x fa-caret-down"></i>
+          <i class="fa fa-fw fa-2x fa-caret-up"></i>
         </button>
       </div>
     <% else %>
