--- a/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
@@ -27,7 +27,7 @@
     }
   }
   .body {
-    max-width: 500px;
+    width: 50%;
     margin: auto;
     p {
       color: darken($mu-color-disabled, 5%);
