--- a/app/views/errors/forbidden.html.erb
+++ b/app/views/errors/forbidden.html.erb
@@ -3,6 +3,7 @@
       <img class="error-code-img" src="/error/403.svg">
     </div>
     <div class="body">
+      <h2><%= t('error.title.forbidden') %></h2>
       <p>
         <%= t(:error_description, error: link_to_status_codes(403)).html_safe %>
       </p>
