--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -3,6 +3,7 @@
       <img class="error-code-img" src="/error/500.svg">
     </div>
     <div class="body">
+      <h2><%= t('error.title.internal_server_error') %></h2>
       <p>
         <%= t(:error_description, error: link_to_status_codes(500)).html_safe %>
       </p>
