--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -3,6 +3,7 @@
       <img class="error-code-img" src="/error/404.svg">
     </div>
     <div class="body">
+      <h2><%= t('error.title.not_found') %></h2>
       <p>
         <%= t(:error_description, error: link_to_error_404).html_safe %>
       </p>
