Removing image bottom margin

--- a/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
@@ -15,6 +15,7 @@
       &.error-code-img {
         margin-top: -80px;
         margin-left: -30px;
+        margin-bottom: 0;
         min-height: 310px;
         max-height: 500px;
         width: calc(100% + 30px);
