--- a/app/views/errors/unauthorized.html.erb
+++ b/app/views/errors/unauthorized.html.erb
@@ -3,7 +3,7 @@
       <img src="/astor.png">
     </div>
     <div class="body">
-      <p>
+      <p class="mu-error-status-line">
         <%= t(:unauthorized_explanation, error: link_to_status_codes(401)).html_safe %>
       </p>
     </div>
