--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -4,10 +4,10 @@
     </div>
     <div class="body">
       <h2><%= t('error.title.not_found') %></h2>
-      <p>
+      <p class="mu-error-status-line">
         <%= t(:error_description, error: link_to_error_404).html_safe %>
       </p>
-      <p>
+      <p class="mu-error-explanation-line">
         <%= Organization.current.explain_error(404, :not_found_explanation).html_safe %>
       </p>
     </div>
