--- a/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
@@ -14,11 +14,11 @@
       max-height: 350px;
       &.error-code-img {
         margin-top: -80px;
-        margin-left: -30px;
+        margin-left: 0;
         margin-bottom: 0;
         min-height: 310px;
         max-height: 500px;
-        width: calc(100% + 30px);
+        width: calc(100%);
         object-position: 50% 50%;
         overflow: hidden;
         @media (max-width: $screen-lg) {
