Using a differnt style for contact admin

--- a/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
@@ -41,6 +41,10 @@
         margin-top: 30px;
       }
     }
+    .mu-maybe {
+      color: darken($mu-color-disabled, 5%);
+      font-size: 18px;
+    }
   }
 }
 
