Hiding error codes by default

--- a/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
@@ -45,6 +45,9 @@
       color: darken($mu-color-disabled, 5%);
       font-size: 18px;
     }
+    .mu-error-status-line {
+      display: none;
+    }
   }
 }
 
