--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
@@ -10,6 +10,16 @@
     flex-flow: row;
     height: calc(100% - #{$kids-characters-height});
     width: 100%;
+
+    .konvajs-content {
+      width: unset !important;
+      height: unset !important;
+      canvas {
+        width: unset !important;
+        height: unset !important;
+      }
+    }
+
   }
 
   .mu-kids-single-state,
