--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -1,6 +1,6 @@
 <div class="mu-user-header">
   <h1><%= @user.name %></h1>
-  <div class="mu-profile-actions">
+  <div class="mu-profile-actions hidden-xs">
     <%= edit_profile_button %>
   </div>
 </div>
@@ -20,5 +20,9 @@
     <div>
       <span> <strong><%= t :programming_since %>:</strong> <%= t(:time_since, time: time_ago_in_words(@user.created_at)) %> </span>
     </div>
+  </div>
+
+  <div class="mu-profile-actions mobile visible-xs">
+    <%= edit_profile_button %>
   </div>
 </div>
