Reducing error header size

--- a/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
@@ -31,7 +31,8 @@
     width: 60%;
     margin: auto;
     h2 {
-      font-size: 42px;
+      font-size: 38px;
+      margin-bottom: 0px;
     }
     p {
       font-size: 25px;
