--- a/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_errors.scss
@@ -13,9 +13,7 @@
       margin: 30px auto;
       max-height: 350px;
       &.error-code-img {
-        margin-top: -80px;
-        margin-left: 0;
-        margin-bottom: 0;
+        margin: 0;
         min-height: 310px;
         max-height: 500px;
         width: calc(100%);
