--- a/app/views/layouts/_discussions.html.erb
+++ b/app/views/layouts/_discussions.html.erb
@@ -60,7 +60,7 @@
                   <span><%= discussion.exercise.name %></span>
                   <% if discussion.last_moderator_access_visible_for?(current_user) %>
                     <div class="pull-right discussion-moderator-access" >
-                      <%= profile_picture_for(discussion.last_moderator_access_by, 32) %>
+                      <%= profile_picture_for(discussion.last_moderator_access_by, height: 32) %>
                       <span class="moderator-initials">
                         <%= discussion.last_moderator_access_by.name_initials %>
                       </span>
