--- a/app/views/layouts/modals/_kindergarten_results.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results.html.erb
@@ -1,6 +1,6 @@
 <div class="modal fade mu-kids-results mu-kindergarten-context" id="kids-results" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content <%= icon_class_for @assignment %>">
+    <div class="modal-content <%= icon_class_for @assignment if @assignment%>">
       <div class="modal-body">
         <button type="button" class="mu-kindergarten-close-button" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">
