Add empty styles for Medals

--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -17,6 +17,7 @@
 @import "modules/kids";
 @import "modules/kindergarten";
 @import "modules/kids_results";
+@import "modules/medal";
 @import "modules/modal";
 @import "modules/organization_chooser";
 @import "modules/overlap";
