Show medal on guide view

--- a/app/views/layouts/_guide.html.erb
+++ b/app/views/layouts/_guide.html.erb
@@ -25,6 +25,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="text-box">
+      <%= content_medal_for(@guide, current_user) %>
       <%= @guide.description_html %>
 
       <div class="actions">
